removing complex shadow schemaPlus and entity structures